tests/reference/pass_global_stmts-global_scope6-278bd63.stderr
syntax error: Statement or Declaration expected inside program, found Expression
 --> tests/global_scope6.f90:3:1
  |
3 | 2*x
  | ^^^ 
